Add Project References Base On Clean Architecture
API => Infrastructure
Infrastructure => Application
Application => Domain

--- a/src/NadinSoft.CRUD.Application/NadinSoft.CRUD.Application.csproj
+++ b/src/NadinSoft.CRUD.Application/NadinSoft.CRUD.Application.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\NadinSoft.CRUD.Domain\NadinSoft.CRUD.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
