--- a/src/NadinSoft.CRUD.API/NadinSoft.CRUD.API.csproj
+++ b/src/NadinSoft.CRUD.API/NadinSoft.CRUD.API.csproj
@@ -10,4 +10,8 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\NadinSoft.CRUD.Infrastructure\NadinSoft.CRUD.Infrastructure.csproj" />
+    </ItemGroup>
+
 </Project>
