Add DbContext and Product EntityFrameworkCore Configuration File
DbContext Added and also product custom configuration added to prevent extra space.

 ProduceDate and ManufactureEmail of Product are Unique in DataBase

--- a/src/NadinSoft.CRUD.Infrastructure/NadinSoft.CRUD.Infrastructure.csproj
+++ b/src/NadinSoft.CRUD.Infrastructure/NadinSoft.CRUD.Infrastructure.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\NadinSoft.CRUD.Application\NadinSoft.CRUD.Application.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.18" />
+    </ItemGroup>
+
 </Project>
