Fix ConnectionString and Add Authentication Controller
-ConnectionString needs to modify
-Required packages installed for migration
-Authentication services added in ServiceCollectionExtension
-Custom SwaggerGen ui added for using token

--- a/src/NadinSoft.CRUD.API/appsettings.json
+++ b/src/NadinSoft.CRUD.API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "Issuer": "ProductApp",
+    "Audience": "ProductAppUsers",
+    "Key": "supersecretkeysupersecretkey123456789"
+  }
 }
