--- a/src/NadinSoft.CRUD.API/.env
+++ b/src/NadinSoft.CRUD.API/.env
@@ -1,1 +1,1 @@
-CURRENT_DB_CONNECTION_STRING='Server=localhost;Database=NadinSoft_Db;User Id=sa;Password=YourStrong!Passw0rd;'
+CURRENT_DB_CONNECTION_STRING=Server=127.0.0.1;Database=NadinSoft_Db;User Id=sa;Password=YourStrong!Passw0rd;Encrypt=False;TrustServerCertificate=True;
