--- a/src/NadinSoft.CRUD.Infrastructure/NadinSoft.CRUD.Infrastructure.csproj
+++ b/src/NadinSoft.CRUD.Infrastructure/NadinSoft.CRUD.Infrastructure.csproj
@@ -7,28 +7,30 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\NadinSoft.CRUD.Application\NadinSoft.CRUD.Application.csproj" />
+        <ProjectReference Include="..\NadinSoft.CRUD.Application\NadinSoft.CRUD.Application.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.18" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.18" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.18">
-        <PrivateAssets>all</PrivateAssets>
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      </PackageReference>
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.18" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.18" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.18">
-        <PrivateAssets>all</PrivateAssets>
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      </PackageReference>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.18"/>
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.18"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.18"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.18">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.18"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.18"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.18">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
     </ItemGroup>
 
     <ItemGroup>
-      <Reference Include="Microsoft.AspNetCore.Http.Abstractions">
-        <HintPath>..\..\..\..\.nuget\packages\microsoft.aspnetcore.app.ref\8.0.15\ref\net8.0\Microsoft.AspNetCore.Http.Abstractions.dll</HintPath>
-      </Reference>
+        <Reference Include="Microsoft.AspNetCore.Http.Abstractions">
+            <HintPath>..\..\..\..\.nuget\packages\microsoft.aspnetcore.app.ref\8.0.15\ref\net8.0\Microsoft.AspNetCore.Http.Abstractions.dll</HintPath>
+        </Reference>
     </ItemGroup>
 
 </Project>
