--- a/src/NadinSoft.CRUD.Application/NadinSoft.CRUD.Application.csproj
+++ b/src/NadinSoft.CRUD.Application/NadinSoft.CRUD.Application.csproj
@@ -11,11 +11,12 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="AutoMapper" Version="15.0.1" />
+      <PackageReference Include="AutoMapper" Version="12.0.0" />
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
       <PackageReference Include="FluentValidation" Version="12.0.0" />
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
       <PackageReference Include="MediatR" Version="13.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.18" />
     </ItemGroup>
 
 </Project>
