Add Dockerfile add Docker-Compose file to run project with Docker
-Dockerfile for project added
-Docker-Compose added
-LoadEnv added to appsettings to controller .env load

--- a/src/NadinSoft.CRUD.API/appsettings.json
+++ b/src/NadinSoft.CRUD.API/appsettings.json
@@ -10,5 +10,6 @@
     "Issuer": "ProductApp",
     "Audience": "ProductAppUsers",
     "Key": "supersecretkeysupersecretkey123456789"
-  }
+  },
+  "LoadEnv": false
 }
