Split Connection string in .env file and modify docker-compose

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-CURRENT_DB_CONNECTION_STRING=Server=NadinSoft_DB;Database=NadinSoft_Db;User Id=sa;Password=YourStrong!Passw0rd;Encrypt=False;TrustServerCertificate=True;
+DB_SERVER=NadinSoft_DB
+DB_NAME=NadinSoft_Db
+DB_USER=sa
+DB_PASSWORD=YourStrong!Passw0rd
+DB_ENCRYPT=False
+DB_TRUST_CERT=True
